Add data/namespace/defaultBlockstates.json and use it to resolve default blockstates for 26.3+ worlds, generate and load a default-blockstates pack from the loaded server on startup if possible